tuxmath (1.8.0-5) UNRELEASED; urgency=low

  * Bump standards version to 3.9.4.

 -- Holger Levsen <holger@debian.org>  Tue, 28 May 2013 22:52:51 +0200

tuxmath (1.8.0-4) unstable; urgency=low

  * debian/control:
    - update Vcs-Headers as tuxmath is now maintained in git. 
    - bump standards version to 3.9.2, no changes needed.
    - depend on either fonts-sil-andika or ttf-sil-andika (Closes: #647532).
      (To ease backporting.)
  * debian/copyright: mention location of upstream GIT repository, instead of
    svn.

 -- Holger Levsen <holger@debian.org>  Thu, 22 Dec 2011 19:39:06 +0100

tuxmath (1.8.0-3) unstable; urgency=low

  * debian/menu: move to section Applications/Education. 

 -- Holger Levsen <holger@debian.org>  Mon, 21 Jun 2010 21:24:59 +0200

tuxmath (1.8.0-2) unstable; urgency=low

  * Make debian menu use the .xpm icon. 

 -- Holger Levsen <holger@debian.org>  Wed, 19 May 2010 14:07:08 +0200

tuxmath (1.8.0-1) unstable; urgency=low

  * New upstream release, featuring scalable vector graphics and support
    for multiplayer competition plus new translations to Asturian, Kurdish, 
    Slovenian and Vietnamese.
  * Add librsvg2-dev and libsdl-net1.2-dev to build-depends.
  * Add ${misc:Depends} to depends.
  * Use upstream SVG icon. (Closes: #531136)
  * Use upstream .desktop file. (Closes: #531137)
  * Bump standards version to 3.8.4, no changes needed.
  * Provide source/format and set it to 1.0.

 -- Holger Levsen <holger@debian.org>  Thu, 13 May 2010 10:57:27 +0200

tuxmath (1.7.2-1) unstable; urgency=low

  * New upstream version, with several bugfixes, new translations and lots of 
    other improvements: a new "Campaign Mode" featuring an overall story line,
    a new game activity, "Factoroids", teaching factorization and reduction of
    fractions, a more flexible engine for generating questions and an improved 
    fullscreen which now uses the native resolution. 
  * For a complete list, see the upstream changelog.