@@ -2,7 +2,7 @@ Source: tuxmath
 Section: games
 Priority: optional
 Maintainer: Holger Levsen <holger@debian.org>
-Build-Depends: debhelper (>=5.0.42), libsdl1.2-dev, libsdl-image1.2-dev, libsdl-mixer1.2-dev, libsdl-ttf2.0-dev, libx11-6, libxext6, libsdl-pango-dev, librsvg2-dev, libsdl-net1.2-dev
+Build-Depends: debhelper (>=9.20120909~), libsdl1.2-dev, libsdl-image1.2-dev, libsdl-mixer1.2-dev, libsdl-ttf2.0-dev, libx11-6, libxext6, libsdl-pango-dev, librsvg2-dev, libsdl-net1.2-dev
 Standards-Version: 3.9.4
 Homepage: http://tux4kids.alioth.debian.org
 Vcs-Git: git://anonscm.debian.org/tux4kids/tuxmath.git
