@@ -1,91 +1,19 @@
-#!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
-
+#! /usr/bin/make -f
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+%:
+	dh $@
 
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-config.status: 
-	dh_testdir
-	# Add here commands to configure the package.
-	CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --bindir=\$${prefix}/games
+override_dh_auto_configure:
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --bindir=\$${prefix}/games
 	
+override_dh_install:
+	rm $(CURDIR)/debian/tuxmath/usr/share/tuxmath/fonts/AndikaDesRevG.ttf
+	dh_install
+	mv $(CURDIR)/debian/tuxmath/usr/share/tuxmath/images/icons/tuxmath.svg $(CURDIR)/debian/tuxmath/usr/share/pixmaps/
 
-build: build-stamp
-
-build-stamp: config.status
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-	
-	touch build-stamp
-
-clean:	
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp 
-
-	# Add here commands to clean up after the build process.
-	[ ! -e Makefile ] || $(MAKE) distclean
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/tuxmath.
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp prefix=/usr bin_prefix=$(CURDIR)/debian/tuxmath/usr/games
-	mkdir -p $(CURDIR)/debian/tuxmath/usr/share/applications
-	cp $(CURDIR)/tuxmath.desktop \
-		$(CURDIR)/debian/tuxmath/usr/share/applications/tuxmath.desktop
-	rm $(CURDIR)/debian/tmp/usr/share/tuxmath/fonts/AndikaDesRevG.ttf
-	mkdir -p $(CURDIR)/debian/tuxmath/usr/share/pixmaps/
-	mv $(CURDIR)/debian/tmp/usr/share/tuxmath/images/icons/tuxmath.svg $(CURDIR)/debian/tuxmath/usr/share/pixmaps/
-	rmdir $(CURDIR)/debian/tmp/usr/share/tuxmath/fonts
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
+override_dh_installdocs:
 	dh_installdocs
-	dh_installexamples
-	dh_install --sourcedir=debian/tmp
-	dh_installmenu
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	cd $(CURDIR)/debian/tuxmath/usr/share/doc/tuxmath && rm COPYING_GPL2 COPYING_GPL3 GPL_VERSIONS INSTALL.txt OFL.txt README_DATA_LICENSES.TXT
 
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
