@@ -1,0 +1,3 @@
+usr/games
+usr/share/applications
+usr/share/pixmaps
