@@ -1,3 +1,1 @@
-usr/games
-usr/share/locale
-usr/share/tuxmath
+tuxmath.desktop	/usr/share/applications/
